# rawji

./: .gitignore  README.md  convert-all-sims.sh  flake.nix  pyproject.toml
src/rawji/: __init__.py  __main__.py  fuji_enums.py  fuji_profile.py  fuji_usb.py
